2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-08-01  Dennis Cranston  <dennis_cranston at yahoo com>

	* at-enable-dialog.glade: Patch to add two more pixels of spacing
	between action area and vbox of preferences dialog.
	
Fri Aug  1 14:28:52 2003  Jonathan Blandford  <jrb@redhat.com>

	* main.c (init_startup_state): remove markup tags from translated
	strings, #118801.

2003-07-18  Jonathan Blandford  <jrb@gnome.org>

	* main.c: Add a check to confirm that the AT's are installed.  Add
	a warning message if they are not.  Change widget naming scheme.

	* at-enable-dialog.glade: Change widget naming scheme.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Make close the default button.

2003-07-16  Dennis Cranston <dennis_cranston at yahoo com>

	* at-enable-dialog.glade:  Adjust widget padding and remove
	separator per HIG.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-07-01  Daniel Baeyens <daniel.baeyens@hispalinux.es>
	* capplets/accessibility/at-properties/at-enable-dialog.glade:
	"Assistive" is misspelled.