@@ -1,3 +1,8 @@
+2003-12-07  Jan Arne Petersen  <jpetersen@uni-bonn.de>
+
+	* background-properties-capplet.c: remove unused
+	"preview_file_selection.h" include.
+
 2004-02-13  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.3
