@@ -1,3 +1,8 @@
+2003-11-27  Muktha <muktha.narayan@wipro.com>
+
+	* main.c: Do not popup the logout dialog when the close button (X) of
+	window manager is clicked. Fixes bug #124032.
+
 2004-02-13  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.5.3
